# taquba

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
examples/: email_queue.rs  image_resize.rs  in_memory.rs  local_disk.rs  worker.rs
src/: job.rs  lib.rs  queue.rs  reaper.rs  scheduler.rs  stats.rs
taquba/: CHANGELOG.md  Cargo.toml  README.md
taquba-bencher/: Cargo.toml  README.md  RESULTS.md
taquba-bencher/benches/taquba/: claim_drain.rs  cold_start.rs  payload_sweep.rs  reaper_storm.rs  sharding.rs  steady_state.rs
taquba-bencher/benches/taquba-bulk/: bulk_throughput.rs  resume_replay.rs
taquba-bencher/benches/taquba-jobs/: fanout.rs
taquba-bencher/benches/taquba-workflow/: step_transitions.rs
taquba-bencher/src/: counting.rs  jitter.rs  lib.rs
taquba-bencher/terraform/: .gitignore  README.md  main.tf  outputs.tf  sample-storage.sh  terraform.tfvars.example  user_data.sh.tftpl  variables.tf  versions.tf
taquba-bulk/: CHANGELOG.md  Cargo.toml  README.md
taquba-bulk/benches/: README.md  bulk_throughput.rs  resume_replay.rs
taquba-bulk/examples/: document_pipeline.rs  wordcount.rs  wordcount_bulk.rs
taquba-bulk/src/: bulk.rs  cost.rs  error.rs  io.rs  lib.rs  pipeline.rs  progress.rs  runner.rs
taquba-cron/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
taquba-cron/examples/: hello_cron.rs
taquba-cron/src/: lib.rs
taquba-jobs/: CHANGELOG.md  Cargo.toml  README.md
taquba-jobs/benches/: README.md  fanout.rs
taquba-jobs/examples/: hello_jobs.rs
taquba-jobs/src/: context.rs  error.rs  handle.rs  job.rs  lib.rs  result_store.rs  runner.rs
taquba-webhooks/: CHANGELOG.md  Cargo.toml  README.md
taquba-webhooks/examples/: hello_webhook.rs
taquba-webhooks/src/: lib.rs  worker.rs
taquba-workflow/: CHANGELOG.md  Cargo.toml  README.md
taquba-workflow/benches/: README.md  step_transitions.rs
taquba-workflow/examples/: fanout_jobs.rs  multi_step.rs  rig_agent.rs  single_step.rs
taquba-workflow/src/: error.rs  lib.rs  memo.rs  runner.rs  runtime.rs  terminal.rs
taquba/benches/: README.md  claim_drain.rs  cold_start.rs  reaper_storm.rs  steady_state.rs
taquba/benches/common/: mod.rs
taquba/examples/: atomic_settlement.rs  email_queue.rs  image_resize.rs  in_memory.rs  local_disk.rs  quickstart.rs  worker.rs
taquba/src/: claim_cursor.rs  clock.rs  error.rs  job.rs  lib.rs  metrics_sampler.rs  obs.rs  queue.rs  reaper.rs  scheduler.rs  stats.rs  worker.rs
