[workspace]
members = ["taquba", "taquba-cron"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/micllam/taquba"

[workspace.dependencies]
taquba = { path = "taquba", version = "0.3.0" }

tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
thiserror = "1"
