[package]
name = "taquba-jobs"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Durable, typed async function execution on top of the Taquba durable task queue."
homepage = "https://github.com/micllam/taquba"
readme = "README.md"
keywords = ["queue", "jobs", "background", "async", "taquba"]

[dependencies]
taquba = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

rmp-serde = "1"
sha2 = "0.10"
ulid = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
