[package]
name = "taquba-workflow"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Durable, at-least-once workflow runtime on top of the Taquba task queue. Particularly well-suited for AI agent runs."
homepage = "https://github.com/micllam/taquba"
readme = "README.md"
keywords = ["queue", "workflow", "agent", "durable", "taquba"]

[features]
default = []
# Enables the WebhookTerminalHook helper that fires HTTP terminal-state
# notifications via taquba-webhooks.
webhooks = ["dep:taquba-webhooks"]

[package.metadata.docs.rs]
# Build docs with `webhooks` enabled so `WebhookTerminalHook` is visible
# on docs.rs.
all-features = true

[dependencies]
taquba = { workspace = true }
taquba-webhooks = { workspace = true, optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
rmp-serde = "1"
sha2 = "0.10"

futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Used only for `CancellationToken`, which is re-exported on `Step` so
# runners can opt in to cooperative mid-step cancellation.
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }

ulid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }

# Used only by the `rig_agent` example.
rig-core = "0.37"
anyhow = "1"
serde_json = "1"

[[bench]]
name = "step_transitions"
# Disable libtest's bench harness so the file runs as a plain
# `#[tokio::main]` binary, matching the taquba crate's benches.
harness = false
