[package]
name = "taquba"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A durable, single-process task queue for Rust backed by object storage, built on SlateDB."
homepage = "https://github.com/micllam/taquba"
readme = "README.md"
keywords = ["queue", "task", "worker", "slatedb"]

[features]
# No backend is enabled by default; the in-memory and local-disk stores work
# without any feature.
default = []
aws = ["slatedb/aws"]
gcp = ["slatedb/gcp"]
azure = ["slatedb/azure"]

[package.metadata.docs.rs]
# Build docs with every feature on so each backend's docs are visible on
# docs.rs. They compile together; users pick one per deployment.
all-features = true

[dependencies]
# We always pull in SlateDB's `foyer` cache feature.
slatedb = { version = "0.13.1", default-features = false, features = ["foyer"] }
ulid = { workspace = true, features = ["serde"] }
rmp-serde = "1"
bytes = "1"

tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Benches install a stderr subscriber (RUST_LOG-driven).
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bench]]
name = "claim_drain"
# Disable libtest's bench harness so the file runs as a plain `#[tokio::main]`
# binary. We use `cargo bench` for discovery only, not for the harness.
harness = false

[[bench]]
name = "steady_state"
harness = false

[[bench]]
name = "cold_start"
harness = false

[[bench]]
name = "reaper_storm"
harness = false
