[package]
name = "taquba"
version = "0.8.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A durable, single-process task queue for Rust backed by object storage, built on SlateDB."
homepage = "https://github.com/micllam/taquba"
readme = "README.md"
keywords = ["queue", "task", "worker", "slatedb"]

[features]
# No backend is enabled by default; the in-memory and local-disk stores work
# without any feature.
default = []
aws = ["slatedb/aws"]
gcp = ["slatedb/gcp"]
azure = ["slatedb/azure"]
# Emit queue health metrics through the `metrics` facade.
metrics = ["dep:metrics"]

[package.metadata.docs.rs]
# Build docs with every feature on so each backend's docs are visible on
# docs.rs. They compile together; users pick one per deployment.
all-features = true

[dependencies]
# We always pull in SlateDB's `foyer` cache feature.
slatedb = { version = "0.13.1", default-features = false, features = ["foyer"] }
ulid = { workspace = true, features = ["serde"] }
rmp-serde = "1"
bytes = "1"

tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
metrics = { version = "0.24", optional = true }

[dev-dependencies]
# Used only by the `#[cfg(feature = "metrics")]` tests.
metrics-util = "0.18"

